demos/networkPolicyDemo/nginx_test_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nginx
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ubuntunginx
  template:
    metadata:
      labels:
        app: ubuntunginx
    spec:
      containers:
      - image: nginx
        name: ubnginx
      nodeSelector:
        disk: ssd
