demos/networkPolicyDemo/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-default
  namespace: example
spec:
  podSelector: {} # Apply to all pods in the `example` namespace
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: example-ns
