demos/networkPolicyDemo/NetworkPolicy_ip.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-from-fronend-allow-to-backend
  namespace: example
spec:
  podSelector: {} # Apply to all pods in the `example` namespace
  ingress:
  - from:
    - ipBlock:
        cidr: 192.168.77.0/16 # Broader CIDR block
        except:
        - 192.168.77.169/32 # Block this specific IP frontend
        - 192.168.77.170/32 # Block this specific IP frontend
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.41.178/31 # backend
